# rust-analyzer-bazel-gen-repro

./: .gitignore  WORKSPACE  somewhat-working-rust-project.json
a/: BUILD.bazel  Cargo.toml
a/src/: lib.rs
b/: BUILD.bazel  Cargo.toml
b/src/: lib.rs
c/: BUILD.bazel  Cargo.toml
c/src/: lib.rs
